# libIPQP

./: CMakeLists.txt  README.md
include/: ipqp.h  ipqp_apdu.h  ipqp_common.h  ipqp_dev_conf.h.in  ipqp_device.h  ipqp_proj_conf.h.in
source/: ipqp.c  ipqp_apdu.c  ipqp_apdu_i2c.c  ipqp_apdu_spi.c  ipqp_apdu_tcp.c  ipqp_apdu_uart.c  ipqp_common.c  ipqp_device.c  ipqp_device_i2c.c  ipqp_device_spi.c  ipqp_device_tcp.c  ipqp_device_uart.c
tests/: i2c_device_test.c  i2c_dsa_full_test.c  i2c_dsa_genkey_test.c  i2c_dsa_sign_test.c  i2c_dsa_verify_test.c  i2c_kem_decapsulate_test.c  i2c_kem_encapsulate_test.c  i2c_kem_full_test.c  i2c_kem_genkey_test.c  kat.c  kat.h  liboqs_dsa_genkey_test.c  liboqs_kem_encapsulate_test.c  loop_test.sh  project_info.c  simple_test.c  spi_device_test.c  spi_dsa_full_test.c  spi_dsa_genkey_test.c  spi_dsa_sign_test.c  spi_dsa_verify_test.c  spi_kem_decapsulate_test.c  spi_kem_encapsulate_test.c  spi_kem_full_test.c  spi_kem_genkey_test.c  tcp_device_emu_c.c  tcp_device_emu_h.c  tcp_device_test.c  tcp_dsa_full_test.c  tcp_dsa_genkey_test.c  tcp_dsa_sign_test.c  tcp_dsa_verify_test.c  tcp_kem_decapsulate_test.c  tcp_kem_encapsulate_test.c  tcp_kem_full_test.c  tcp_kem_genkey_test.c  test_common.c  test_common.h  uart_device_emu_c.c  uart_device_emu_h.c  (+9 more)
